# VirtualCoinPriceRecorder

./: main.py  pyproject.toml
output/: 202102.csv
tests/: test_virtualcoinpricerecorder.py
