[tool.poetry]
name = "VirtualCoinPriceRecorder"
version = "0.1.0"
description = ""
authors = ["yss <waku.pdxppxzy@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
black = "^20.8b1"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
